Revert "Fixed issue where header was too big and header would go below video background"

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -7,11 +7,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
+    width: 100vw;
     padding: 0% 15%;
     box-sizing: border-box;
     border-bottom: 0.5px solid rgb(53, 85, 64);
-    z-index: 3;
 }
 
 .header img {
