--- a/src/app/home/home-view/home.component.css
+++ b/src/app/home/home-view/home.component.css
@@ -1,41 +1,9 @@
-home.component.css
-
 *  {
     box-sizing: border-box;
-}
+  }
+  
 
-
-/* MAIN */
-
-#main {
-    display: flex;
-    height: 330px;
-}
-
-.background-video, #background-pic {
-    position: absolute;
-    top: 170px;
-    left: 0;
-    width: 100%;
-    height: 60%;
-    object-fit: cover;
-    z-index: 1;
-    opacity: 0;
-    transition: opacity 0.5s ease;
-}
-
-.background-video.show, #background-pic.show {
-    opacity: 1;
-}
-
-#button-container {
-    z-index: 2;
-}
-
-
-/*FILTERS */
-
-#Filters {
+  #Filters {
     display: flex;  
     justify-content: space-between; 
     align-items: center;
@@ -68,6 +36,12 @@ home.component.css
     opacity: 1; 
 }
 
+
+#SortByButton {
+    width: 80px;
+    background-color: white;
+}
+
 #Reset {
     background-color: rgb(132, 185, 132);
     border-radius: 10%;
@@ -79,7 +53,6 @@ home.component.css
     background-color:rgb(165, 232, 165) ;
     border-color:rgb(165, 232, 165) ;
 }
-
 .FilterRight {
     display: flex;
     align-items: center; 
@@ -109,16 +82,8 @@ home.component.css
     border-color: rgb(241, 194, 255) ;
     border-style: solid;  
 }
-
 .secondary:hover {
     background-color:rgb(246, 215, 253) ;
     border-color:rgb(246, 215, 253) ;
 }
 
-
-/*SORT BY*/
-
-#SortByButton {
-    width: 80px;
-    background-color: white;
-}
